--- a/reference/settings/settings.mdx
+++ b/reference/settings/settings.mdx
@@ -211,7 +211,7 @@ Dromo uses industry-standard best practices to secure your data on our servers.
 
 object
 
-Default: \{}
+Default: `{}`
 
 Settings for the Matching Step experience
 
@@ -243,7 +243,7 @@ Settings for the Matching Step experience
 
 object
 
-Default: \{}
+Default: `{}`
 
 Settings for the Bulk Fix step experience (formerly known as the Match Values step)
 
