fixes page breaking

--- a/reference/fields/field-types.mdx
+++ b/reference/fields/field-types.mdx
@@ -408,7 +408,7 @@ Here is an example of a few different valid field type configurations:
 
   URL fields can be used to validate and normalize all URLs. You can optionally specify a list of accepted protocols (like `https`) and/or domains (`like dromo.io`).
 
-  The value of the URL will be normalized to strip extra dashes and relative path references. For example, an input of https:///dromo.io/foo/../bar is a valid URL, but will be normalized to the value <https://dromo.io/bar>.
+  The value of the URL will be normalized to strip extra dashes and relative path references. For example, an input of https:///dromo.io/foo/../bar is a valid URL, but will be normalized to the value `https://dromo.io/bar`.
 </div>
 
 ### US State/Territory[​](#us-stateterritory "Direct link to US State/Territory")
